test_regress/t/t_fsmmulti_combo_warn_bad.out
%Warning-FSMMULTI: t/t_fsmmulti_combo_warn_bad.v:31:5: FSM coverage: multiple supported transition candidates found in the same combinational always block. Only the first candidate will be instrumented.
   31 |     case (state_b_q)
      |     ^~~~
                   ... For warning description see https://verilator.org/warn/FSMMULTI?v=5.047
                   ... Use "/* verilator lint_off FSMMULTI */" and lint_on around source to disable this message.
%Error: Exiting due to 1 warning(s)
